<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi-Light</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="device_name">Name:</string>
    <string name="device_password">Old password:</string>
    <string name="device_new_password">New password:</string>
    <string name="light_clock">Clock</string>
    <string name="light_color">Color</string>
    <string name="light_music">Music</string>
    <string name="light_dynamic">Dynamic</string>
    <string name="dialog_title">Edit name &amp; password</string>
    <string name="dialog_password">password</string>
    <string name="about_us">"BLE-Milight is an app that allows you to control the Milight Bluetooth light bulbs with your Android devices.
Milight bluetooth bulbs connect to your phone via bluetooth technology, so you can easily control your Milight bluetooth bulbs directly from your smart phone.

The BLE-Milight app for Android allows you to turn your Milight bluetooth bulbs on and off, adjust the brightness, choose millions of colors, change the color temperature, organise your lights into four groups.
It contains the following features:
.Music Color Changing
.Timer function
.Party Disco Mode
.Color Circle.

Milight is one of the famous and leading brand for smart led lighting. We will keep updating and making the app more and more convenient for end-users."</string>
</resources>
