<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/text_color_white" android:gravity="center" android:background="@drawable/dialog_title_bg" android:layout_width="fill_parent" android:layout_height="46.0dip" android:text="@string/dialog_title" />
        <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <LinearLayout android:orientation="vertical" android:background="#ff262a35" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_color_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/device_name" />
            <EditText android:textSize="18.0sp" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/et_name" android:background="@drawable/edit_bg" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="4.0dip" android:singleLine="true" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text_color_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/device_password" />
            <EditText android:textSize="18.0sp" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/et_old_pwd" android:background="@drawable/edit_bg" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="4.0dip" android:singleLine="true" android:inputType="textPassword" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text_color_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/device_new_password" />
            <EditText android:textSize="18.0sp" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/et_new_pwd" android:background="@drawable/edit_bg" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="30.0dip" android:singleLine="true" android:inputType="textPassword" />
        </LinearLayout>
        <View android:background="@color/text_color_gray" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="18.0sp" android:textColor="@color/text_color_white" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/dialog_btn_cancel" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
            <View android:background="@color/text_color_gray" android:layout_width="0.5dip" android:layout_height="fill_parent" />
            <Button android:textSize="18.0sp" android:textColor="@color/text_color_white" android:gravity="center" android:id="@id/btn_ok" android:background="@drawable/dialog_btn_ok" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>